--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -28,4 +28,7 @@
             <directory suffix=".php">./src</directory>
         </include>
     </source>
+    <php>
+        <env name="APP_KEY" value="base64:2fl+Ktvkfl+Fuz4Qp/A75G2RTiWVA/ZoKZvp6fiiM14="/>
+    </php>
 </phpunit>
